# RagBot

./: .dockerignore  .env.example  .gitignore  Makefile  docker-compose.yml
api/: Dockerfile  config.py  main.py  pyproject.toml
api/agent/: graph.py
ollama/: entrypoint.sh
ui/: Dockerfile  package-lock.json  package.json
ui/app/: page.tsx
